--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                             &copy; <a class="border-bottom" href="#">Chez MBIKAYI</a>, Town Square. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Conçu par <a class="border-bottom" href="https://htmlcodex.com">Software Community</a>
+							Conçu par <a class="border-bottom" href="">Software Community</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
